@@ -1,18 +1,11 @@
 Package: recosystem
 Type: Package
 Title: Recommender System using Matrix Factorization
-Version: 0.2.3
-Date: 2014-09-08
-Authors@R: c(person(given = "Yixuan", family = "Qiu", role = c("aut", "cre"),
-                    email = "yixuan.qiu@cos.name"),
-             person(given = "Chih-Jen", family = "Lin", role = c("aut","cph"),
-                    comment = "original C++ code"),
-             person(given = "Yu-Chin", family = "Juan", role = c("aut","cph"),
-                    comment = "original C++ code"),
-             person(given = "Yong", family = "Zhuang", role = c("aut","cph"),
-                    comment = "original C++ code"),
-             person(given = "Wei-Sheng", family = "Chin", role = c("aut","cph"),
-                    comment = "original C++ code"))
+Version: 0.2.4
+Date: 2014-09-12
+Author: Yixuan Qiu, Chih-Jen Lin, Yu-Chin Juan, Yong Zhuang,
+    Wei-Sheng Chin and other contributors. See file AUTHORS for
+    details.
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: This package is an R wrapper of the libmf library
     (http://www.csie.ntu.edu.tw/~cjlin/libmf/) for recommender
@@ -31,12 +24,7 @@ Imports: Rcpp (>= 0.11.0)
 Suggests: knitr
 LinkingTo: Rcpp
 VignetteBuilder: knitr
-Packaged: 2014-09-08 15:06:23 UTC; qyx
-Author: Yixuan Qiu [aut, cre],
-  Chih-Jen Lin [aut, cph] (original C++ code),
-  Yu-Chin Juan [aut, cph] (original C++ code),
-  Yong Zhuang [aut, cph] (original C++ code),
-  Wei-Sheng Chin [aut, cph] (original C++ code)
+Packaged: 2014-09-12 20:52:34 UTC; qyx
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-09-11 10:00:26
+Date/Publication: 2014-09-13 08:01:57
