@@ -1,30 +1,30 @@
-96299167c9039cf4c8e87169c579ae40 *DESCRIPTION
+1f85fc27e984cd09e366e979fb278913 *DESCRIPTION
 e93d01b46bd9cbb196f4d47570ecd7bf *LICENSE
 7b0ea56150c00f1f5c33fac7d487420a *NAMESPACE
 805c186fc302d2f6b234347a1f7d103d *R/RecoDat.R
 743b9e94e46df9b7ca2a20dfe38e6e49 *R/RecoModel.R
 15d59dbaaa2bd736a3c18112f5b3f9bb *R/RecoSys.R
-1055a0f16a0fb8081c929f732b7e592f *README.md
 255cb151d58041b30d6dada7b8da3ec4 *build/vignette.rds
+ef663a584e300de9bce5d25c596dd684 *inst/AUTHORS
 bbb2c0a054bf559598fc53a4466102c6 *inst/COPYRIGHTS
-762f4209486574d7b7e1d357d60c3ce6 *inst/NEWS.Rd
+3de2b1311f072e56fe79d883a416cc55 *inst/NEWS.Rd
 09ff383037acea9ce3d92bd2b279c985 *inst/dat/smalltest.txt
 d9e88b463350a2014e23447e141b6d3f *inst/dat/smalltrain.txt
 b7c857a0ca884fec34d93e9aca8a7e58 *inst/doc/introduction.R
 836621a93749a6abcd0e3da2ba48c073 *inst/doc/introduction.Rmd
-81892a52b5f55e25cdfc5d7a2fa4d7e1 *inst/doc/introduction.html
-12031486707ac6c5d68fd3d4159c6b0d *man/Reco.Rd
-41ca41d7cb601a054860ce4add4354c1 *man/convert.Rd
-0b82673a27ca10a1a56170767cf8e8e4 *man/predict.Rd
-5373f56043afcb257233db545018f7bd *man/train.Rd
+674ac6cd4df37c17ff107d5879be58fb *inst/doc/introduction.html
+396927a5b2ef7fd9556daf299f21c84b *man/Reco.Rd
+6ee8dff4703fecf195b4a7a0f524ba27 *man/convert.Rd
+42ef8931fc48b6936b233340b2ece753 *man/predict.Rd
+75846b1b943b1fc0313c868bfca1456e *man/train.Rd
 a8fca94a329022ddb3cac06eec62716c *src/Makevars
 06b0ad1738bd2cf89c439870c7bc8de1 *src/Makevars.win
 542e8441d1361f3e3c1926892183e324 *src/convert.cpp
-ba13527242c9e559df058117696df983 *src/memalign.cpp
+1606b0e41de7e7844a716855100770b9 *src/memalign.cpp
 4b08f32e795314485bf767a82cdd0000 *src/mf.cpp
-63ce81697ac4d7341da826395c37d8ca *src/mf.h
+1813ed7cdb3614ac9bfa5f626b6c2110 *src/mf.h
 a5ea4765400d62b97ff1ca9026e3f6a5 *src/predict.cpp
-7c770c5bcf6fd197846d17ce506cad7a *src/pseudorand.h
-7cfa46856da8820b4958b082bb1fd402 *src/train.cpp
+5687b1a3784706e62d58c4a316b8450c *src/rand.h
+d7ab09b618f7fc72833fa9a621589aa1 *src/train.cpp
 87f0a1f63da6a632a0476bb09a381f3b *src/view.cpp
 836621a93749a6abcd0e3da2ba48c073 *vignettes/introduction.Rmd
